[gd_scene load_steps=16 format=2]

[ext_resource path="res://Asset/TileMap/16x48.tscn" type="PackedScene" id=1]
[ext_resource path="res://Asset/TileMap/16x16.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/TileMap/48x32.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/TileMap/32x48.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/TileMap/32x32.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/TileMap/16x64.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actual/Asset/Office_furniture_set.png" type="Texture" id=7]
[ext_resource path="res://Asset/TileMap/64x48.tscn" type="PackedScene" id=8]
[ext_resource path="res://Asset/TileMap/16x32.tscn" type="PackedScene" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Actual/Script/CursorBehaviour.gd" type="Script" id=11]
[ext_resource path="res://Actual/Script/theRoom.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7.01668 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 32 )

[node name="Ruangan2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile" type="Node2D" parent="."]

[node name="16x32" parent="Tile" instance=ExtResource( 9 )]
cell_size = Vector2( 16, 32 )
tile_data = PoolIntArray( 524300, 2, 0, 524309, 2, 0, 524321, 2, 0 )

[node name="16x64" parent="Tile" instance=ExtResource( 6 )]
position = Vector2( -4, -32 )
tile_data = PoolIntArray( 262144, 1, 0, 262183, 1, 0 )

[node name="32x32" parent="Tile" instance=ExtResource( 5 )]
tile_data = PoolIntArray( 524291, 0, 0, 524299, 0, 0, 524302, 0, 0 )

[node name="32x48" parent="Tile" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327682, 5, 0, 327692, 5, 0 )

[node name="48x32" parent="Tile" instance=ExtResource( 3 )]
tile_data = PoolIntArray( 524291, 0, 0, 524294, 0, 0, 524298, 0, 0 )

[node name="64x48" parent="Tile" instance=ExtResource( 8 )]
tile_data = PoolIntArray( 262145, 0, 0, 262152, 1, 0 )

[node name="16x16" parent="Tile" instance=ExtResource( 2 )]
position = Vector2( 1, -7 )
show_collision = false
tile_data = PoolIntArray( 589824, 20, 0, 589825, 21, 0, 589826, 21, 0, 589827, 21, 0, 589828, 21, 0, 589829, 21, 0, 589830, 21, 0, 589831, 21, 0, 589832, 21, 0, 589833, 21, 0, 589834, 21, 0, 589835, 21, 0, 589836, 21, 0, 589837, 21, 0, 589838, 21, 0, 589839, 21, 0, 589840, 21, 0, 589841, 21, 0, 589842, 21, 0, 589843, 21, 0, 589844, 21, 0, 589845, 21, 0, 589846, 21, 0, 589847, 21, 0, 589848, 21, 0, 589849, 21, 0, 589850, 21, 0, 589851, 21, 0, 589852, 21, 0, 589853, 21, 0, 589854, 21, 0, 589855, 21, 0, 589856, 21, 0, 589857, 21, 0, 589858, 21, 0, 589859, 21, 0, 589860, 21, 0, 589861, 21, 0, 589862, 21, 0, 589863, 22, 0, 655367, 25, 0, 655378, 25, 0, 655388, 25, 0, 983049, 24, 0, 983058, 24, 0, 983070, 24, 0, 1048587, 0, 0, 1048596, 1, 0, 1048608, 0, 0 )

[node name="16x48" parent="Tile" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 327690, 6, 0, 327699, 6, 0, 327711, 6, 0, 327717, 0, 0 )

[node name="B1" type="Sprite" parent="."]
visible = false
position = Vector2( 168, 208 )
scale = Vector2( 1, 1.14286 )
texture = ExtResource( 7 )
hframes = 32
vframes = 8
frame = 9

[node name="Area2D" type="Area2D" parent="B1"]
position = Vector2( 0, 3.05176e-05 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="B1/Area2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="B1"]
anchor_top = -0.5
anchor_right = 1.062
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = -7.992
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B2" type="Sprite" parent="."]
visible = false
position = Vector2( 184, 312 )
scale = Vector2( 1, 1.14286 )
texture = ExtResource( 7 )
hframes = 32
vframes = 8
frame = 9

[node name="Area2D" type="Area2D" parent="B2"]
position = Vector2( 0, 3.05176e-05 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="B2/Area2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="B2"]
anchor_top = -0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B3" type="Sprite" parent="."]
visible = false
position = Vector2( 384, 184 )
scale = Vector2( 1, 1.14286 )
texture = ExtResource( 7 )
hframes = 32
vframes = 8
frame = 9

[node name="Area2D" type="Area2D" parent="B3"]
position = Vector2( 0, 3.05176e-05 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="B3/Area2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="B3"]
anchor_top = -0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B4" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 280 )
scale = Vector2( 1, 1.14286 )
texture = ExtResource( 7 )
hframes = 32
vframes = 8
frame = 9

[node name="Area2D" type="Area2D" parent="B4"]
position = Vector2( 0, 3.05176e-05 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="B4/Area2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="B4"]
anchor_top = -0.5
anchor_right = 1.062
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = -7.992
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O1" type="Sprite" parent="."]
position = Vector2( 256, 272 )
scale = Vector2( 0.25, 0.625 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="O1"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="O1/Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="O1"]
anchor_top = -0.2
anchor_right = 1.0
margin_left = -32.0
margin_top = -32.2
margin_right = -32.0
margin_bottom = -31.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O2" type="Sprite" parent="."]
position = Vector2( 368, 272 )
scale = Vector2( 0.25, 0.625 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="O2"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="O2/Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="O2"]
anchor_top = -0.2
anchor_right = 1.0
margin_left = -32.0
margin_top = -32.2
margin_right = -32.0
margin_bottom = -31.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ruangan1" type="Area2D" parent="."]
position = Vector2( 628, 257 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ruangan1"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Inventory" type="Label" parent="."]
margin_left = 5.0
margin_top = 338.0
margin_right = 293.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="B1/Area2D" to="B1/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="B1/Area2D" to="B1/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="B1/Area2D" to="B1/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="B2/Area2D" to="B2/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="B2/Area2D" to="B2/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="B2/Area2D" to="B2/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="B3/Area2D" to="B3/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="B3/Area2D" to="B3/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="B4/Area2D" to="B4/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="B4/Area2D" to="B4/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="B4/Area2D" to="B4/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="O1/Area2D" to="O1/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="O1/Area2D" to="O1/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="O1/Area2D" to="O1/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="O2/Area2D" to="O2/Area2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="O2/Area2D" to="O2/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="O2/Area2D" to="O2/Area2D" method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Ruangan1" to="Ruangan1" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Ruangan1" to="Ruangan1" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Ruangan1" to="Ruangan1" method="_on_Area2D_mouse_exited"]
